...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.StepCountFragment">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_count_string"
                    android:textSize="@dimen/home_text_size" />

                <TextView
                    android:id="@+id/overall_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/step_placeholder"
                    android:textSize="@dimen/home_text_size" />
            </TableRow>
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_string"
                    android:textSize="@dimen/home_text_size" />

                <TextView
                    android:id="@+id/overall_dist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/dist_placeholder"
                    android:textSize="@dimen/home_text_size" />

...
